--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
+    "chartjs": "^0.3.24",
     "clsx": "^2.1.1",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
@@ -26,6 +27,7 @@
     "pg": "^8.13.1",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.17",
     "use-debounce": "^10.0.4",
