--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "chartjs": "^0.3.24",
     "clsx": "^2.1.1",
     "next": "15.1.3",
-    "next-auth": "^4.24.11",
+    "next-auth": "5.0.0-beta.25",
     "next-i18n-router": "^5.5.1",
     "pg": "^8.13.1",
     "postcss": "^8.5.1",
