--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "i18nConfig.js", "locales/dictionaries.js", "locales/koResource.js", "locales/enResource.js", "middleware.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "i18nConfig.js", "locales/dictionaries.js", "locales/koResource.js", "locales/enResource.js", "middleware.ts"],
   "exclude": ["node_modules"]
 }
