--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "chartjs": "^0.3.24",
     "clsx": "^2.1.1",
+    "mpsProject": "file:",
     "next": "15.1.3",
     "next-auth": "5.0.0-beta.25",
     "next-i18n-router": "^5.5.1",
@@ -42,5 +43,10 @@
     "eslint": "^9.18.0",
     "eslint-config-next": "15.1.0",
     "typescript": "^5.7.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt"
+    ]
   }
 }
