--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.1",
-    "@mui/icons-material": "^6.4.1",
-    "@mui/material": "^6.4.1",
-    "@mui/material-nextjs": "^6.3.1",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
+    "@mui/material-nextjs": "^6.4.3",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
@@ -24,23 +24,26 @@
     "next": "15.1.3",
     "next-auth": "5.0.0-beta.25",
     "next-i18n-router": "^5.5.1",
-    "pg": "^8.13.1",
-    "postcss": "^8.5.1",
+    "pg": "^8.13.3",
+    "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.17",
     "use-debounce": "^10.0.4",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.17.16",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "eslint": "^9.18.0",
+    "@types/node": "^20.17.19",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "eslint": "^9.20.1",
     "eslint-config-next": "15.1.0",
     "typescript": "^5.7.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": ["bcrypt","sharp"]
   }
 }
