--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "typescript": "^5.7.3"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["bcrypt","sharp"]
+    "onlyBuiltDependencies": [
+      "bcrypt",
+      "sharp"
+    ]
   }
 }
