--- a/package.json
+++ b/package.json
@@ -16,20 +16,26 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@mui/material-nextjs": "^6.4.3",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
+    "canvas": "^3.1.0",
     "chartjs": "^0.3.24",
     "clsx": "^2.1.1",
+    "copy-webpack-plugin": "^13.0.0",
     "mpsProject": "file:",
     "next": "15.1.3",
     "next-auth": "5.0.0-beta.25",
     "next-i18n-router": "^5.5.1",
+    "pdfjs-dist": "5.1.91",
     "pg": "^8.13.3",
     "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-pdf": "9.2.1",
     "react-select": "^5.10.1",
     "tailwindcss": "^3.4.17",
     "use-debounce": "^10.0.4",
@@ -44,6 +50,10 @@
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.0",
     "typescript": "^5.7.3"
+  },
+  "resolutions": {
+    "pdfjs-dist": "2.11.338",
+    "react-pdf": "9.2.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
