--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^20.17.19",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-pdf": "^7.0.0",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.0",
     "typescript": "^5.7.3"
