--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev -H localhost -p 3001 --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -26,6 +26,7 @@
     "chartjs": "^0.3.24",
     "clsx": "^2.1.1",
     "copy-webpack-plugin": "^13.0.0",
+    "https": "^1.0.0",
     "mpsProject": "file:",
     "next": "15.3.1",
     "next-auth": "5.0.0-beta.25",
