--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "next": "15.3.1",
     "next-auth": "5.0.0-beta.25",
     "next-i18n-router": "^5.5.1",
-    "pdfjs-dist": "2.6.347",
+    "pdfjs-dist": "4.8.69",
     "pg": "^8.14.1",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-pdf": "9.2.1",
+    "react-pdf": "^9.2.1",
     "react-select": "^5.10.1",
     "tailwindcss": "^3.4.17",
     "use-debounce": "^10.0.4",
