--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chartjs": "^0.3.24",
     "clsx": "^2.1.1",
     "copy-webpack-plugin": "^13.0.0",
+    "csv-parser": "^3.2.0",
     "https": "^1.0.0",
     "mpsProject": "file:",
     "next": "15.3.1",
