--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "chartjs": "^0.3.24",
     "clsx": "^2.1.1",
     "copy-webpack-plugin": "^13.0.0",
-    "csv-parser": "^3.2.0",
+    "csv-parse": "^5.6.0",
     "https": "^1.0.0",
     "mpsProject": "file:",
     "next": "15.3.1",
@@ -38,6 +38,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-pdf": "^9.2.1",
     "react-select": "^5.10.1",
     "tailwindcss": "^3.4.17",
