--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-pdf": "^9.2.1",
