--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H localhost -p 443 --experimental-https",
+    "dev": "next dev -H localhost -p 80",
     "build": "next build",
     "start": "next start -H localhost -p 80",
     "lint": "next lint"
